force-app/main/default/objects/Cancel_Request__c/Cancel_Request__c.object-meta.xml
<CustomObject>
    <description>Junction object between Retention Opportunities and Assets</description>
    <label>Cancel Request</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Cancel Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancel Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>