force-app/main/default/objects/Cancel_Request__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>OpportunityAssets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>