force-app/main/default/objects/Cancel_Request__c/fields/Cancel_Meta_Theme__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Meta_Theme__c</fullName>
    <label>Cancel Meta-Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cancel_Meta_Themes</valueSetName>
    </valueSet>
</CustomField>