force-app/main/default/objects/Cancel_Request__c/fields/Cancel_Month__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Month__c</fullName>
    <label>Cancel Month</label>
    <type>Date</type>
</CustomField>