force-app/main/default/objects/Cancel_Request__c/fields/Cancel_Request_Count__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Request_Count__c</fullName>
    <description>Used to Roll up the count of Cancel Requests</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancel Request Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>