force-app/main/default/objects/Cancel_Request__c/fields/Cancel_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Request_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Cancel Request Date</label>
    <type>Date</type>
</CustomField>