force-app/main/default/objects/Cancel_Request__c/fields/Cancel_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Request_Type__c</fullName>
    <label>Cancel Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>