force-app/main/default/objects/Cancel_Request__c/fields/Cancel_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Sub_Category__c</fullName>
    <label>Cancel Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cancel_Meta_Theme__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relationship</fullName>
                <color>#33CCFF</color>
                <label>Relationship</label>
            </value>
            <value>
                <fullName>Commitment</fullName>
                <color>#3366FF</color>
                <label>Commitment</label>
            </value>
            <value>
                <fullName>Technology</fullName>
                <color>#9999FF</color>
                <label>Technology</label>
            </value>
            <value>
                <fullName>Invoicing</fullName>
                <color>#33CC00</color>
                <label>Invoicing</label>
            </value>
            <value>
                <fullName>Collections</fullName>
                <color>#009900</color>
                <label>Collections</label>
            </value>
            <value>
                <fullName>Features</fullName>
                <color>#FF0000</color>
                <label>Features</label>
            </value>
            <value>
                <fullName>Integration</fullName>
                <color>#FF6666</color>
                <label>Integration</label>
            </value>
            <value>
                <fullName>Expectations</fullName>
                <color>#A845DC</color>
                <label>Expectations</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
                <color>#F3D904</color>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Problem Resolution</fullName>
                <color>#FFCC66</color>
                <label>Problem Resolution</label>
            </value>
            <value>
                <fullName>Lifecycle Management</fullName>
                <color>#FFCC33</color>
                <label>Lifecycle Management</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>