force-app/main/default/objects/Cancel_Request__c/fields/Cancellation_Details__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Details__c</fullName>
    <label>Final Cancellation Details</label>
    <type>TextArea</type>
</CustomField>