force-app/main/default/objects/Cancel_Request__c/fields/Cancellation_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reasons__c</fullName>
    <label>Cancellation Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cancel_Sub_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Staff Change/Resistance</fullName>
                <color>#66FFFF</color>
                <label>Staff Change/Resistance</label>
            </value>
            <value>
                <fullName>Patient complaints</fullName>
                <color>#33CCFF</color>
                <label>Patient complaints</label>
            </value>
            <value>
                <fullName>Acquired/Office Closing</fullName>
                <color>#66CCCC</color>
                <label>Acquired/Office Closing</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <color>#000000</color>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Financial Hardship</fullName>
                <color>#3366FF</color>
                <label>Financial Hardship</label>
            </value>
            <value>
                <fullName>Buyer&#39;s Remorse</fullName>
                <color>#0B6FCE</color>
                <label>Buyer&#39;s Remorse</label>
            </value>
            <value>
                <fullName>Contract Averse</fullName>
                <color>#0B24BE</color>
                <label>Contract Averse</label>
            </value>
            <value>
                <fullName>Timing</fullName>
                <color>#6666CC</color>
                <label>Timing</label>
            </value>
            <value>
                <fullName>ROI/Price</fullName>
                <color>#000099</color>
                <label>ROI/Price</label>
            </value>
            <value>
                <fullName>Incorrect Use of PM</fullName>
            </value>
            <value>
                <fullName>Outdated Technology</fullName>
            </value>
            <value>
                <fullName>No Access/Permission To Server</fullName>
            </value>
            <value>
                <fullName>Provisioned</fullName>
                <color>#333399</color>
                <label>Provisioned</label>
            </value>
            <value>
                <fullName>Invoicing Errors</fullName>
                <color>#78C953</color>
                <label>Invoicing Errors</label>
            </value>
            <value>
                <fullName>Unable to Collect</fullName>
                <color>#419249</color>
                <label>Unable to Collect</label>
            </value>
            <value>
                <fullName>Unavailable Feature</fullName>
                <color>#FF0000</color>
                <label>Unavailable Feature</label>
            </value>
            <value>
                <fullName>Functionality of Current Feature</fullName>
                <color>#F96FB7</color>
                <label>Functionality of Current Feature</label>
            </value>
            <value>
                <fullName>User Experience/Interface</fullName>
                <color>#CC0000</color>
                <label>User Experience/Interface</label>
            </value>
            <value>
                <fullName>No Integration</fullName>
                <color>#FF6666</color>
                <label>No Integration</label>
            </value>
            <value>
                <fullName>Quality/Features</fullName>
                <color>#A53711</color>
                <label>Quality/Features</label>
            </value>
            <value>
                <fullName>Export</fullName>
                <color>#990000</color>
                <label>Export</label>
            </value>
            <value>
                <fullName>Contract/Billing</fullName>
                <color>#A845DC</color>
                <label>Contract/Billing</label>
            </value>
            <value>
                <fullName>Product</fullName>
                <color>#CC33CC</color>
                <label>Product</label>
            </value>
            <value>
                <fullName>Integration</fullName>
                <color>#CC66CC</color>
                <label>Integration</label>
            </value>
            <value>
                <fullName>Bundle (HG/LL Only)</fullName>
                <color>#FF99FF</color>
                <label>Bundle (HG/LL Only)</label>
            </value>
            <value>
                <fullName>Experience</fullName>
                <color>#F3D904</color>
                <label>Experience</label>
            </value>
            <value>
                <fullName>Responsiveness</fullName>
                <color>#FFCC66</color>
                <label>Responsiveness</label>
            </value>
            <value>
                <fullName>Recurring issues</fullName>
                <color>#CC9933</color>
                <label>Recurring issues</label>
            </value>
            <value>
                <fullName>Outreach</fullName>
                <color>#FFCC33</color>
                <label>Outreach</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>