force-app/main/default/objects/Cancel_Request__c/fields/Current_Feature__c.field-meta.xml
<CustomField>
    <fullName>Current_Feature__c</fullName>
    <inlineHelpText>Current Feature(s) Client is unsatisfied with</inlineHelpText>
    <label>Current Feature</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products</valueSetName>
    </valueSet>
</CustomField>