force-app/main/default/objects/Cancel_Request__c/fields/Current_MSF__c.field-meta.xml
<CustomField>
    <fullName>Current_MSF__c</fullName>
    <label>Current MSF</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>