force-app/main/default/objects/Cancel_Request__c/fields/Current_SR_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Current_SR_Subscription__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Current SR Subscription</label>
    <referenceTo>RecurSoft__Product_Subscription__c</referenceTo>
    <relationshipLabel>Cancel Requests (Current SR Subscription)</relationshipLabel>
    <relationshipName>Cancel_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>