force-app/main/default/objects/Cancel_Request__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Dispute</fullName>
            </value>
            <value>
                <fullName>Non-Dispute Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>