force-app/main/default/objects/Cancel_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Initial Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>