force-app/main/default/objects/Cancel_Request__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Retention - Trial Extension</fullName>
            </value>
            <value>
                <fullName>Save</fullName>
            </value>
            <value>
                <fullName>No Sale</fullName>
            </value>
            <value>
                <fullName>Cancel - Trial</fullName>
            </value>
            <value>
                <fullName>Cancel - Annual</fullName>
            </value>
            <value>
                <fullName>Cancel - Backlog</fullName>
            </value>
            <value>
                <fullName>Resume - No Change</fullName>
            </value>
            <value>
                <fullName>Cancel - Stream</fullName>
            </value>
            <value>
                <fullName>Cancel - Contract Buyout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>