force-app/main/default/objects/Cancel_Request__c/fields/E_T_Reason__c.field-meta.xml
<CustomField>
    <fullName>E_T_Reason__c</fullName>
    <inlineHelpText>Please select one if we are letting them out of their contract early.</inlineHelpText>
    <label>E.T. Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Failed Collections</fullName>
            </value>
            <value>
                <fullName>KOL/VIP</fullName>
            </value>
            <value>
                <fullName>Litigation Risk</fullName>
            </value>
            <value>
                <fullName>Month 2 Month</fullName>
            </value>
            <value>
                <fullName>Never Billed/ Billing Error</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>P.R. Reasons</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Sync Issues</fullName>
            </value>
            <value>
                <fullName>Technical Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>