force-app/main/default/objects/Cancel_Request__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address to send cancellation email.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>