force-app/main/default/objects/Cancel_Request__c/fields/Email_Alerts_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Alerts_Sent__c</fullName>
    <description>Auto response email templates sent via workflow.</description>
    <label>Email Alerts Sent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>