force-app/main/default/objects/Cancel_Request__c/fields/Final_Cancel_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Cancel_Status__c</fullName>
    <formula>if(and(text(Cancel_Request_Type__c)=&quot;Annual&quot;,text(Stage__c)=&quot;Cancelled&quot;),&quot;Annual Cancel&quot;, 
if(and(text(Cancel_Request_Type__c)=&quot;Trial&quot;,text(Stage__c)= &quot;Cancelled&quot;), &quot;Trial Cancel&quot;, 
if(and(text(Cancel_Request_Type__c)=&quot;Trial&quot;,text(Stage__c)= &quot;No Sale&quot;),&quot;No Sale&quot;, 
&quot;&quot;)))</formula>
    <label>Final Cancel Status</label>
    <type>Text</type>
</CustomField>