force-app/main/default/objects/Cancel_Request__c/fields/Keep_Amount__c.field-meta.xml
<CustomField>
    <fullName>Keep_Amount__c</fullName>
    <formula>IF ( ISPICKVAL( Cancel_Request_Type__c , &quot;Trial&quot;), ( Months_Paid_Trial__c * Current_MSF__c ) + (( Save_Term__c - New_Free_Months__c ) * Save_MSF__c ) , (( Save_Term__c - New_Free_Months__c ) * Save_MSF__c ) - ( Months_Remaining_Annual__c * Current_MSF__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Keep Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>