force-app/main/default/objects/Cancel_Request__c/fields/Keep_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Keep_Percentage__c</fullName>
    <formula>IF(  ISBLANK(Current_MSF__c), 0, 
     IF ( ISPICKVAL( Cancel_Request_Type__c , &quot;Trial&quot;), Keep_Amount__c / (24 * Current_MSF__c ) , 
     If (Months_Remaining_Annual__c = 0 , (( Save_Term__c - New_Free_Months__c ) * Save_MSF__c ) / ( 12 * Current_MSF__c ), 
     (( Save_Term__c - New_Free_Months__c ) * Save_MSF__c ) / ( Months_Remaining_Annual__c * Current_MSF__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Keep Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>