force-app/main/default/objects/Cancel_Request__c/fields/Modified_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Modified_Subscription__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Modified Subscription</label>
    <referenceTo>RecurSoft__Product_Subscription__c</referenceTo>
    <relationshipLabel>Cancel Requests</relationshipLabel>
    <relationshipName>Cancel_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>