force-app/main/default/objects/Cancel_Request__c/fields/Month_to_Month_Promo__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Month_Promo__c</fullName>
    <label>Month to Month Promo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>