force-app/main/default/objects/Cancel_Request__c/fields/Months_Gained__c.field-meta.xml
<CustomField>
    <fullName>Months_Gained__c</fullName>
    <label>Months Gained</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>