force-app/main/default/objects/Cancel_Request__c/fields/Months_Paid_Trial__c.field-meta.xml
<CustomField>
    <fullName>Months_Paid_Trial__c</fullName>
    <label>Months Paid - Trial</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>