force-app/main/default/objects/Cancel_Request__c/fields/Months_Remaining_Annual__c.field-meta.xml
<CustomField>
    <fullName>Months_Remaining_Annual__c</fullName>
    <label>Months Remaining - Annual</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>