force-app/main/default/objects/Cancel_Request__c/fields/Most_Recent_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Activation_Date__c</fullName>
    <label>Most Recent Activation Date</label>
    <type>Date</type>
</CustomField>