force-app/main/default/objects/Cancel_Request__c/fields/New_Unavailable_Feature__c.field-meta.xml
<CustomField>
    <fullName>New_Unavailable_Feature__c</fullName>
    <inlineHelpText>Enter a new Unavailable Feature</inlineHelpText>
    <label>New Unavailable Feature</label>
    <length>80</length>
    <type>Text</type>
</CustomField>