force-app/main/default/objects/Cancel_Request__c/fields/No_Client_Left_Behind__c.field-meta.xml
<CustomField>
    <fullName>No_Client_Left_Behind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Client Left Behind</label>
    <type>Checkbox</type>
</CustomField>