force-app/main/default/objects/Cancel_Request__c/fields/No_Client_Left_Behind_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Client_Left_Behind_Reason__c</fullName>
    <label>No Client Left Behind Reason</label>
    <type>TextArea</type>
</CustomField>