force-app/main/default/objects/Cancel_Request__c/fields/Number_of_deffered_months_offered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_deffered_months_offered__c</fullName>
    <label>Number of deffered months offered</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>