force-app/main/default/objects/Cancel_Request__c/fields/Original_Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Original_Setup_Fee__c</fullName>
    <label>Original Setup Fee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>