force-app/main/default/objects/Cancel_Request__c/fields/Other_Competittor__c.field-meta.xml
<CustomField>
    <fullName>Other_Competittor__c</fullName>
    <label>Other Competitor</label>
    <length>55</length>
    <type>Text</type>
</CustomField>