force-app/main/default/objects/Cancel_Request__c/fields/Product_and_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_and_Request_Type__c</fullName>
    <formula>RecordType.DeveloperName &amp; &quot; - &quot; &amp;  Text(Cancel_Request_Type__c)</formula>
    <label>Product and Request Type</label>
    <type>Text</type>
</CustomField>