force-app/main/default/objects/Cancel_Request__c/fields/Projected_Contract_Expiration_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Projected_Contract_Expiration_Renewal__c</fullName>
    <label>Projected Contract Expiration/Renewal</label>
    <type>Date</type>
</CustomField>