force-app/main/default/objects/Cancel_Request__c/fields/Save_MSF_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Save_MSF_Reduction__c</fullName>
    <formula>Current_MSF__c - Save_MSF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Save MSF Reduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>