force-app/main/default/objects/Cancel_Request__c/fields/Save_Offer_Free_Writeback__c.field-meta.xml
<CustomField>
    <fullName>Save_Offer_Free_Writeback__c</fullName>
    <label>Save Offer Free Writeback</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>