force-app/main/default/objects/Cancel_Request__c/fields/Save_Term__c.field-meta.xml
<CustomField>
    <fullName>Save_Term__c</fullName>
    <inlineHelpText>Months on new Term including any waived months</inlineHelpText>
    <label>Save Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>